tests/baselines/reference/internalAliasInterfaceInsideTopLevelModuleWithExport.errors.txt
internalAliasInterfaceInsideTopLevelModuleWithExport.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalAliasInterfaceInsideTopLevelModuleWithExport.ts (1 errors) ====
    export module a {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface I {
        }
    }
    
    export import b = a.I;
    export var x: b;
    